Creación de controlador y modelo para guardar los datos básicos de la persona
