# swagger/swagger.yml
@@ -100,6 +100,24 @@ paths:
           description: '{string} delete success!'
         "403":
           description: objectId is empty
+  /persona/GuardarPersona:
+    post:
+      tags:
+      - persona
+      description: Guardar Persona
+      operationId: PersonaController.PostPersona
+      parameters:
+      - in: body
+        name: body
+        description: body for Guardar Persona content
+        required: true
+        schema:
+          $ref: '#/definitions/models.PersonaCompleta'
+      responses:
+        "201":
+          description: '{int} models.PersonaCompleta'
+        "403":
+          description: body is empty
   /user/:
     get:
       tags:
@@ -219,6 +237,42 @@ paths:
         "200":
           description: '{string} logout success'
 definitions:
+  models.EstadoCivil:
+    title: EstadoCivil
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      CodigoAbreviacion:
+        type: string
+      Descripcion:
+        type: string
+      Id:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      NumeroOrden:
+        type: number
+        format: double
+  models.Genero:
+    title: Genero
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      CodigoAbreviacion:
+        type: string
+      Descripcion:
+        type: string
+      Id:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      NumeroOrden:
+        type: number
+        format: double
   models.Object:
     title: Object
     type: object
@@ -230,6 +284,35 @@ definitions:
       Score:
         type: integer
         format: int64
+  models.PersonaCompleta:
+    title: PersonaCompleta
+    type: object
+    properties:
+      Ente:
+        type: integer
+        format: int64
+      EstadoCivil:
+        $ref: '#/definitions/models.EstadoCivil'
+      FechaNacimiento:
+        type: string
+        format: string
+      Foto:
+        type: string
+      Genero:
+        $ref: '#/definitions/models.Genero'
+      Id:
+        type: integer
+        format: int64
+      PrimerApellido:
+        type: string
+      PrimerNombre:
+        type: string
+      SegundoApellido:
+        type: string
+      SegundoNombre:
+        type: string
+      Usuario:
+        type: string
   models.Profile:
     title: Profile
     type: object
